[project]
name = "pydriver_The_Boogeyman"
version = "0.0.1"
authors = [
  { name="The_Boogeyman", email="asyouwere@gmail.com" },
]
description = "makes requesting w/ payloads easier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Th3-B00g3ym4n/pydriver"
"Bug Tracker" = "https://github.com/Th3-B00g3ym4n/pydriver/issues"
